# pasys-rs

./: .gitignore  Cargo.toml  Makefile  README.md  openapi.yml
.github/workflows/: workflow.yml
accounts/: Cargo.toml
accounts-proto/: Cargo.toml  build.rs
accounts-proto/src/: lib.rs
accounts/src/: lib.rs  main.rs
accounts/src/api/: mod.rs  parsers.rs
accounts/src/domain/: account.rs
accounts/src/repo/: create.rs  mod.rs  retrieve.rs
accounts/src/service/: mod.rs
accounts/tests/api/: account.rs  health_check.rs  helpers.rs
common/: Cargo.toml
common/src/: database.rs  lib.rs
events-proto/: Cargo.toml  build.rs
events-proto/src/: lib.rs
fraud-detector/: Cargo.toml
ledger/: Cargo.toml
ledger-consumer/: Cargo.toml
ledger-core/: Cargo.toml
ledger-proto/: Cargo.toml  build.rs
ledger-proto/src/: lib.rs
ledger/src/: lib.rs  main.rs
ledger/src/api/: mod.rs
ledger/src/domain/: entry.rs  mod.rs  transaction.rs
ledger/src/repo/: mod.rs
ledger/src/service/: mod.rs
migrations/: 20250908014609_initialise_system.sql
migrations/accounts/: 20250908232432_init.sql  20250908233224_add_status_column_to_accounts_table.sql  20250922000220_create_enums_and_update_column_types.sql  20250923175225_update_created_by_to_string.sql
migrations/ledger/: 20250908232444_init.sql  20250921013257_remove_client_id_column.sql
pasys/: Cargo.toml
pasys-api/: Cargo.toml
pasys-api/src/: config.rs  helpers.rs  main.rs  router.rs  state.rs
pasys-api/src/accounts/: handlers.rs  mod.rs  models.rs  parsers.rs  router.rs
pasys-core/: Cargo.toml
pasys-core/src/domain/: mod.rs
pasys-core/src/domain/account/: account.rs
pasys-core/src/domain/ledger/: entry.rs  mod.rs  transaction.rs
pasys/src/: main.rs
proto/api/v1/: ledger.proto
proto/pasys/events/v1/: account.proto  fraud.proto  reconciliation.proto  refund.proto  settlement.proto  transaction.proto
proto/pasys/services/accounts/v1/: accounts.proto
proto/pasys/services/ledger/v1/: ledger.proto
proto/pasys/v1/: accounts.proto
refund-processor/: Cargo.toml
settlement-processor/: Cargo.toml
transactions-api/: Cargo.toml
