[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version ="0.6.3", features = ["runtime-tokio-native-tls", "postgres", "time", "uuid", "macros", "offline", "chrono"] }
anyhow = "1.0.99"
tokio = {version =  "1.47.1", features = ["macros", "rt-multi-thread", "signal"]}
